# htsnexus

./: .gitignore  .travis.yml  README.md
.travis/: before_install.sh
client/: bamnexus.py  htsnexus.py
examples/streaming-freebayes/: update-resources.sh
examples/streaming-freebayes/resources/app/: hs37d5_interLCR_intervals.4Mbp.regions  main.sh  subjob.sh  with_backoff.sh
indexer/: .gitignore  CMakeLists.txt  Dockerfile  Readme.md  test_dxapps.sh
indexer/dxapp/: Makefile  dxapp.json
indexer/dxapp/src/: code.sh
indexer/merge.dxapp/: Makefile  dxapp.json
indexer/merge.dxapp/src/: code.sh
indexer/src/: bgzip_lines.cc  htsnexus_bin_index.py  htsnexus_downsample_index.py  htsnexus_index_bam.c  htsnexus_index_bam.cc  htsnexus_index_cram.cc  htsnexus_index_util.cc  htsnexus_index_vcf.cc  htsnexus_merge_databases.sh
server/: Dockerfile  Dockerrun.aws.json  Makefile  README.md  eb_startup.sh  package-lock.json  package.json  server.sh
server/src/: azure._js  bam_redirect._js  hts_routes._js  htsfiles_routes._js  main.js  protocol._js  server._js
server/test/: test._js  test.db
streaming-freebayes/: Dockerfile  bamtools  build-freebayes.sh  build-resources.sh  libbamtools.so.2.3.0  main.sh  subjob.sh
streaming-freebayes/resources/app/: main.sh  subjob.sh
test/: README.md  htsnexus_integration.t  htsnexus_integration_tests.sh  htsnexus_test_NA12878.bam.bai  htsnexus_test_NA12878.cram
